Fix bug which caused all pages to have body{overflow: hidden;}

--- a/sites/default/files/css/style.css
+++ b/sites/default/files/css/style.css
@@ -18,7 +18,6 @@ body {
   font-family: "Roboto", helvetica, sans-serif, arial;
   color: #ffffff;
   background-color: var(--dark-grey);
-  overflow: hidden;
   overflow-x: hidden;
   /* animation: fade-in 2s; */
 }
